# libomxil-telechips

./: HOW_TO_ADD_MEDIA_COMPONENT  Makefile.am  config.h.in  configure.ac  remove-unused-files-omx.sh  tccomxil_build
src/: Makefile.am
src/omx/: Makefile.am
src/omx/omx_audio_components/: Makefile.am
src/omx/omx_audio_components/decoder/: Makefile.am
src/omx/omx_audio_components/decoder/common/: Makefile.am  omx_audiodec_component.c  omx_audiodec_component.h
src/omx/omx_audio_components/decoder/components/: Makefile.am
src/omx/omx_audio_components/decoder/components/aac/: omx_aacdec_component.c  omx_aacdec_component.h
src/omx/omx_audio_components/decoder/components/amrnb/: omx_amrnbdec_component.c  omx_amrnbdec_component.h
src/omx/omx_audio_components/decoder/components/ape/: omx_apedec_component.c  omx_apedec_component.h
src/omx/omx_audio_components/decoder/components/flac/: omx_flacdec_component.c  omx_flacdec_component.h
src/omx/omx_audio_components/decoder/components/mp3/: omx_mp3dec_component.c  omx_mp3dec_component.h
src/omx/omx_audio_components/decoder/components/opus/: omx_opusdec_component.c  omx_opusdec_component.h
src/omx/omx_audio_components/decoder/components/wav/: omx_wavdec_component.c  omx_wavdec_component.h
src/omx/omx_audio_components/decoder/include/: adec.h  audio_common.h
src/omx/omx_audio_components/include/: adec.h  audio_common.h
src/omx/omx_base/: Makefile.am
src/omx/omx_base/include/: TCCFile.h  TCCMemory.h  omx_base_audio_port.h  omx_base_clock_port.h  omx_base_component.h  omx_base_filter.h  omx_base_image_port.h  omx_base_port.h  omx_base_sink.h  omx_base_source.h  omx_base_video_port.h  queue.h  tsemaphore.h
src/omx/omx_base/src/: TCCMemory.c  omx_base_audio_port.c  omx_base_component.c  omx_base_filter.c  omx_base_image_port.c  omx_base_port.c  omx_base_sink.c  omx_base_source.c  omx_base_video_port.c  queue.c
src/omx/omx_core/: Makefile.am  tcc_omxcore.c
src/omx/omx_include/: OMX_Audio.h  OMX_Component.h  OMX_Core.h  OMX_CoreExt.h  OMX_Index.h  OMX_IndexExt.h  OMX_TCC_Index.h  OMX_Video.h  OMX_VideoExt.h  component_loader.h  lcd_resolution.h  omx_classmagic.h  omx_comp_debug_levels.h  omxcore.h  tcc_audio_common.h  tcc_video_common.h  tccaudio.h
src/omx/omx_videodec_component/: Makefile.am
src/omx/omx_videodec_component/include/: omx_videodec_component.h
src/omx/omx_videodec_component/src/: omx_videodec_component.c
src/omx/omx_videodec_interface/: Makefile.am
src/omx/omx_videodec_interface/include/: vdec.h  vdec_common.h
src/omx/omx_videodec_interface/src/: vdec_k_common.c  vdec_k_hevc.c  vdec_k_mjpeg.c  vdec_k_vpu.c  vdec_k_vpu_4kd2.c  vdec_k_wmv78.c
src/omx/omx_videoenc_component/: Makefile.am
src/omx/omx_videoenc_component/include/: omx_videoenc_component.h
src/omx/omx_videoenc_component/src/: omx_videoenc_component.c
src/omx/omx_videoenc_interface/: Makefile.am
src/omx/omx_videoenc_interface/include/: cdk_error.h  tcc_vpu_encode_interface.h  venc.h
src/omx/omx_videoenc_interface/src/: venc_k.c
